DAY-3: Add solution for day 3. Prepare for day 4.